--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
   <header>
     <h1>Prix au m² — France</h1>
-    <p class="sub">Maisons & Appartements — période glissante 12 mois (exemple de données)</p>
+    <p class="sub">Maisons & Appartements — 12 et 24 derniers mois glissants</p>
   </header>
   <main>
     <div class="card">
@@ -50,11 +50,24 @@
       <div id="out" class="result"></div>
     </div>
     <footer>
-      <p>Sources : <a href="https://api-adresse.data.gouv.fr" target="_blank" rel="noreferrer">API Adresse</a> &nbsp;•&nbsp; <a href="#" onclick="alert('Les prix affichés sont des exemples. Remplacez prices.json par vos agrégats DVF.'); return false;">Exemple DVF</a></p>
+      <p>Sources : <a href="https://api-adresse.data.gouv.fr" target="_blank" rel="noreferrer">API Adresse</a> &nbsp;•&nbsp; DVF (Etalab/DGFIP)</p>
     </footer>
   </main>
 
   <script>
+    // ---------- Helpers affichage ----------
+    function euro(n){
+      if (n == null || Number.isNaN(n)) return "N/A";
+      return new Intl.NumberFormat('fr-FR', { style:'currency', currency:'EUR', maximumFractionDigits: 0 }).format(n);
+    }
+    function number(n){ return new Intl.NumberFormat('fr-FR').format(n ?? 0); }
+    async function loadJSON(url){
+      const r = await fetch(url + '?nocache=' + Date.now(), { cache: 'no-store' });
+      if(!r.ok) throw new Error('HTTP ' + r.status);
+      return await r.json();
+    }
+
+    // ---------- DOM ----------
     const $ = (s) => document.querySelector(s);
     const villeInput = $('#ville');
     const btn = $('#btn');
@@ -63,9 +76,7 @@
     const out = $('#out');
     let chosen = null; // {name, code_insee}
 
-    function euro(n){ return new Intl.NumberFormat('fr-FR', { style:'currency', currency:'EUR', maximumFractionDigits: 0 }).format(n); }
-    function number(n){ return new Intl.NumberFormat('fr-FR').format(n); }
-
+    // ---------- Autocomplétion API Adresse ----------
     async function searchAdresse(q){
       if(!q || q.length < 2) { suggestions.innerHTML = ''; btn.disabled = true; return; }
       suggestions.innerHTML = 'Recherche… <span class="loader"></span>';
@@ -74,13 +85,11 @@
         const res = await fetch(url);
         const data = await res.json();
         if(!data.features.length){ suggestions.innerHTML = '<span class="muted">Aucune commune trouvée.</span>'; btn.disabled = true; return; }
-        // Build list
-        suggestions.innerHTML = data.features.map((f, i) => {
+        suggestions.innerHTML = data.features.map((f) => {
           const name = f.properties.label;
           const code = f.properties.citycode;
           return `<div class="sug" data-code="${code}" data-name="${name}" style="padding:6px 8px; border:1px solid #283060; background:#0b1128; border-radius:10px; margin-top:6px; cursor:pointer">${name} <span class="muted">(${code})</span></div>`;
         }).join('');
-        // click binding
         suggestions.querySelectorAll('.sug').forEach(div => {
           div.addEventListener('click', () => {
             chosen = { name: div.dataset.name, code_insee: div.dataset.code };
@@ -95,7 +104,6 @@
         btn.disabled = true;
       }
     }
-
     villeInput.addEventListener('input', (e) => {
       chosen = null;
       out.classList.remove('show');
@@ -103,45 +111,46 @@
       searchAdresse(e.target.value);
     });
 
+    // ---------- Recherche prix ----------
     btn.addEventListener('click', async () => {
       msg.innerHTML = '';
       out.classList.remove('show');
       out.innerHTML = '';
-      if(!chosen){ msg.innerHTML = '<div class="error">Choisissez d’abord une commune dans les suggestions.</div>'; return; }
-      btn.disabled = true;
-      btn.textContent = 'Chargement…';
+      if(!chosen){ msg.innerHTML = '<div class="error">Choisissez d’abord une commune.</div>'; return; }
+      btn.disabled = true; btn.textContent = 'Chargement…';
+      try {
+        const [p12, p24] = await Promise.all([
+          loadJSON('prices_12.json'),
+          loadJSON('prices_24.json')
+        ]);
+        const r12 = p12.data[chosen.code_insee];
+        const r24 = p24.data[chosen.code_insee];
 
-      try{
-        const res = await fetch('prices.json', { cache: 'no-store' });
-        const prices = await res.json();
-        const row = prices.data[chosen.code_insee];
-        if(!row){
-          out.innerHTML = `<div class="error">Pas de données pour <b>${chosen.name}</b> (${chosen.code_insee}). Remplacez <code>prices.json</code> par vos agrégats DVF.</div>`;
-          out.classList.add('show');
-        } else {
-          out.innerHTML = `
+        function card(title, row, periode, devise){
+          if(!row) return `<div class="error">Pas de données pour ${title.toLowerCase()}.</div>`;
+          return `
+            <div class="muted" style="margin:10px 0 4px">${title} — Période : ${periode} • Unité : ${devise}</div>
             <div class="stats">
-              <div class="stat">
-                <h3>Appartements</h3>
-                <div class="val">${euro(row.appart)}</div>
-                <div class="muted">médiane — n=${number(row.n_ventes.appart)}</div>
-              </div>
-              <div class="stat">
-                <h3>Maisons</h3>
-                <div class="val">${euro(row.maison)}</div>
-                <div class="muted">médiane — n=${number(row.n_ventes.maison)}</div>
-              </div>
+              <div class="stat"><h3>Appartements</h3><div class="val">${euro(row.appart)}</div><div class="muted">médiane — n=${number(row.n_ventes.appart)}</div></div>
+              <div class="stat"><h3>Maisons</h3><div class="val">${euro(row.maison)}</div><div class="muted">médiane — n=${number(row.n_ventes.maison)}</div></div>
             </div>
-            <div class="muted" style="margin-top:8px">Commune : <b>${row.ville}</b> (${chosen.code_insee}) • Période : ${prices.periode} • Unité : ${prices.devise}</div>
           `;
-          out.classList.add('show');
         }
-      } catch(e){
-        out.innerHTML = '<div class="error">Impossible de charger <code>prices.json</code>.</div>';
+
+        out.innerHTML = `
+          ${card('12 derniers mois glissants', r12, p12.periode, p12.devise)}
+          <hr style="border:0;border-top:1px solid #283060;margin:14px 0">
+          ${card('24 derniers mois glissants', r24, p24.periode, p24.devise)}
+          <div class="muted" style="margin-top:8px">
+            Commune : <b>${(r12||r24)?.ville ?? chosen.name}</b> (${chosen.code_insee})
+          </div>
+        `;
+        out.classList.add('show');
+      } catch (err) {
+        out.innerHTML = `<div class="error">Impossible de charger les données.</div>`;
         out.classList.add('show');
       } finally {
-        btn.disabled = false;
-        btn.textContent = 'Rechercher';
+        btn.disabled = false; btn.textContent = 'Rechercher';
       }
     });
   </script>
