--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
       <option value="desc">Décroissant</option>
       <option value="asc">Croissant</option>
     </select>
+      <input id="pop-min" type="number" placeholder="Pop min" value="1500" />
+  <input id="pop-max" type="number" placeholder="Pop max" value="3500" />
+  <button id="btn-ranking">Voir</button>
     <select id="sortby" title="Critère de tri">
       <option value="price">Trier par prix</option>
       <option value="pop">Trier par population</option>
