--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ function renderRankingTable(rows, title) {
 
   const head = `
     <div class="muted" style="margin-bottom:6px">
-      ${title} — <b>${number(nb)}</b> commune${nb>1?'s':''}
+      ${title} — <b>${number(nb)}</b> villes concernées par ce filtre
     </div>
     <table style="width:100%; border-collapse:collapse">
       <thead>
